--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-base64": "^1.0.3",
+    "react-images-upload": "^1.2.8",
+    "react-multiple-image-uploader": "^1.0.3",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
