--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
+    "react-image-file-resizer": "^0.4.7",
     "react-images-upload": "^1.2.8",
     "react-multiple-image-uploader": "^1.0.3",
     "react-router-dom": "^5.3.0",
@@ -19,8 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "npm run build && scp -r ./build/* dominion@84.252.136.64:/home//dominion/Dominion-front-1/build"
+    "deploy": "npm run build && scp -r ./build/* dominion@84.252.136.64:/home/dominion/Dominion-front-1/build",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
